SONARIAC-1363 Comment at the end of YAML files should be assigned to the root node (#1183)